# gui-vizkit3d_octomap

./: CMakeLists.txt  manifest.xml
scripts/: orocos.orocosrb-5191.txt  start.rb~
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp
test/: CMakeLists.txt  suite.cpp  test_Dummy.cpp
viz/: CMakeLists.txt  Octomap.frag  Octomap.vert  OctomapWrapperVisualization.cpp  OctomapWrapperVisualization.hpp  OsgOcTreeBuilder.cpp  OsgOcTreeBuilder.hpp  octomap_display_file  test.rb  test.rb~  vizkit_3d_octomap-viz.pc.in  vizkit_plugin.rb
